--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+<html ng-app="scotchApp">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- SCROLLS -->
+    <!-- load bootstrap and fontawesome via CDN -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
+    <!-- SPELLS -->
+    <!-- load angular via CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+    <script src="app.js"></script>
+
+    <!--Fonts-->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <!--CSS-->
+    <link href="css/grayscale.css" rel="stylesheet">
 </head>
-<body>
-dfgdfg
+
+<!-- define angular controller -->
+<body ng-controller="mainController">
+
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-ultrabar">
+    <div class="container-fluid">
+        <div class="navbar-header logoSmall">
+            <img src="img/cactusmall.png" class="cactusmall">
+            <a class="navbar-brand" style="color: #02a031" href="#">CACTUS X</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a style="color: #02a031" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        </ul>
+    </div>
+</nav>
+
+<header class="intro">
+    <div class="intro-body">
+        <div class="row">
+            <div class="side">
+            </div>
+            <div class="center">
+                <h1 class="brand-heading name">Cactus X</h1>
+                <p class="intro-text">A free, responsive, one page Bootstrap theme.
+                    <br>Created by Start Bootstrap.</p>
+            </div>
+            <div class="side">
+                <form class="form">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputPassword3">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+                    </div>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" style="color: #02a031"> Remember me
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
 </body>
 </html>
