--- a/src/main/resources/static/regform.html
+++ b/src/main/resources/static/regform.html
@@ -21,7 +21,7 @@
     <link href="css/grayscale.css" rel="stylesheet">
 </head>
 <body>
-<div>
+<div class="mainDiv">
     <!--NavBar-->
     <nav class="navbar navbar-inverse navbar-ultrabar">
         <div class="container-fluid">
@@ -39,7 +39,19 @@
     </nav>
 
     <div class="regForm">
-        <h6>Регистрация</h6>
+        <div class="form-group">
+            <label for="usr">ФИО:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Email:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="pwd">Пароль:</label>
+            <input type="password" class="form-control" id="pwd">
+        </div>
+
     </div>
 </div>
 
