--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,10 @@
 
     <!-- SPELLS -->
     <!-- load angular via CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <script src="app.js"></script>
+    <script src="ui-bootstrap-tpls-2.1.4.min.js"></script>
 
     <!--Fonts-->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -48,22 +49,22 @@
                 <p class="intro-text">A free, responsive, one page Bootstrap theme.
                     <br>Created by Start Bootstrap.</p>
             </div>
-            <div class="side">
+            <div class="side" ng-hide="authenticated">
                 <form class="form">
                     <div class="form-group">
                         <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
+                        <input  ng-model="user.name" class="form-control" id="exampleInputEmail3" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label class="sr-only" for="exampleInputPassword3">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
+                        <input type="password" ng-model="user.password" class="form-control" id="exampleInputPassword3" placeholder="Password">
                     </div>
                     <div class="form-check">
                         <label class="form-check-label">
                             <input class="form-check-input" type="checkbox" style="color: #02a031"> Remember me
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" ng-click="auth()"class="btn btn-primary">Sign in</button>
                 </form>
             </div>
         </div>
