--- a/src/main/resources/static/regform.html
+++ b/src/main/resources/static/regform.html
@@ -40,7 +40,11 @@
 
     <div class="regForm">
         <div class="form-group">
-            <label for="usr">ФИО:</label>
+            <label for="usr">Имя:</label>
+            <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+            <label for="usr">Фамилия:</label>
             <input type="text" class="form-control" id="usr">
         </div>
         <div class="form-group">
