--- a/src/main/resources/static/html/mainPage.html
+++ b/src/main/resources/static/html/mainPage.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-inverse navbar-ultrabar">
     <div class="container-fluid">
         <div class="navbar-header logoSmall">
-            <img src="img/cactusmall.png" class="cactusmall">
+            <img src="../img/cactusmall.png" class="cactusmall">
             <a class="navbar-brand" style="color: #02a031" href="#">CACTUS X</a>
         </div>
         <ul class="nav navbar-nav">
