--- a/src/main/resources/static/html/regform.html
+++ b/src/main/resources/static/html/regform.html
@@ -1,4 +1,4 @@
-<div class="mainDiv">
+<div ng-controller="mainController" class="mainDiv">
     <!--NavBar-->
     <nav class="navbar navbar-inverse navbar-ultrabar">
         <div class="container-fluid">
