--- a/src/main/resources/static/html/mainPage.html
+++ b/src/main/resources/static/html/mainPage.html
@@ -11,7 +11,7 @@
             <li class="active"><a href="#">Home</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a style="color: #02a031" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a style="color: #02a031" href="/#/regform"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         </ul>
     </div>
 </nav>
